--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
             <a href="#about">about</a>
             <a href="#doctors">doctors</a>
             <a href="#book">book</a>
-            <a href="#home">review</a>
-            <a href="#home">blogs</a>
+            <a href="#review">review</a>
+            <a href="#blogs">blogs</a>
         </nav>
-
         <div id="menu-btn" class="fas fa-bars"></div>
     </header>
     <!--header section end-->
@@ -30,13 +29,13 @@
 <!--home section starts-->
 
     <section class="home" id="home">
-        < class="image">
-            <img src="home-img.svg" alt="">
-
+        <div class="image">
+            <img src="doctor-animate.svg" alt="">
+</div>
             <div class="content">
                 <h3>stay safe, stay healthy</h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
-                <a href="#" class="btn">contact us<span class="fas fa-hevron-right"></span></a>
+                <a href="#" class="btn">contact us<span class="fas fa-chevron-right"></span></a>
 
             </div>
 
@@ -44,20 +43,199 @@
 
 
     </section>
+    <!-- icons section starts -->
+     
 
+    <section class="icons-container">
+
+        <div class="icons">
+            <i class="fas fa-user-md"></i>
+            <h3>140+</h3>
+            <p>doctors at work</p>
+        </div>
+
+        <div class="icons">
+            <i class="fas fa-user"></i>
+            <h3>1040+</h3>
+            <p>satisfied patients</p>
+        </div>
+
+        <div class="icons">
+            <i class="fas fa-bed"></i>
+            <h3>500+</h3>
+            <p>bed facility</p>
+        </div>
+
+        <div class="icons">
+            <i class="fas fa-hospital"></i>
+            <h3>80+</h3>
+            <p>avaiilable hospitals</p>
+        </div>
+
+    </section>
 
 
 
 <!--home section ends-->
 
 
+<section class="services" id="services">
+
+    <h1 class="heading">our <span>services</span></h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <i class="fas fa-notes-medical"></i>
+            <h3>free checkups</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, eum.</p>
+            <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+        </div>
+        
+        <div class="box">
+            <i class="fas fa-ambulance"></i>
+            <h3>24/7 ambulance</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, eum.</p>
+            <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-user-md"></i>
+            <h3>expert doctors</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, eum.</p>
+            <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-pills"></i>
+            <h3>medicines</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, eum.</p>
+            <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-procedures"></i>
+            <h3>bed facility</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, eum.</p>
+            <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-heartbeat"></i>
+            <h3>total care</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, eum.</p>
+            <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+        </div>
+
+
+
+    </div>
+
+
+
+</section>
+
+
+<section class="about" id="about">
+
+    <h1 class="heading"> <span>about</span> us </h1>
+    <div class="row">
+
+        <div class="image">
+            <img src="cardiologist-animate.svg" alt="">
+        </div>
+
+        <div class="content">
+            <h3>we take care of your healthy life</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure ad incidunt sunt porro numquam delectus at perferendis
+            ab saepe reprehenderit, architecto eius hic maiores, officia facere reiciendis, ut nobis! Minima.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat aperiam enim eveniet,
+             omnis asperiores veniam hic suscipit sunt vel odio.</p>
+             <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+        </div>
+
+    </div>
+
+</section>
+
+<section class="doctors" id="doctors">
+
+    <h1 class="heading"> our <span>doctors</span> </h1>
+
+    <div class="box-container">
+        <div class="box">
+            <img src="image/doc-1.jpg" alt="">
+            <h3>john deo</h3>
+            <span>expert doctor</span>
+            <div class="share">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="image/doc-2.jpg" alt="">
+            <h3>john deo</h3>
+            <span>expert doctor</span>
+            <div class="share">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="image/doc-3.jpg" alt="">
+            <h3>john deo</h3>
+            <span>expert doctor</span>
+            <div class="share">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="image/doc-4.jpg" alt="">
+            <h3>john deo</h3>
+            <span>expert doctor</span>
+            <div class="share">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+
+            </div>
+        </div>
+        <div class="box">
+            <img src="image/doc-5.jpg" alt="">
+            <h3>john deo</h3>
+            <span>expert doctor</span>
+            <div class="share">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+</section>
 
 
 
 
+    <script src="script.js"></script>
 
 
-
-    <script scr="script.js"></script>
 </body>
 </html>
