--- a/index.html
+++ b/index.html
@@ -228,12 +228,77 @@
         </div>
     </div>
 </section>
+<!-- book section start  -->
 
+<section class="book" id="book">
+<h4 class="heading"><span>book</span> now </h4>
+<div class="row">
+    <div class="image">
+        <img src="cardiologist-animate.svg" alt="">
+    </div>
+    <form action="">
+        <h3>book appointment</h3>
+        <input type="text" placeholder="your name" class="box">
+        <input type="number" placeholder="your number" class="box">
+        <input type="email" placeholder="your email" class="box">
+        <input type="date" class="box">
+        <input type="submit" value="book now" class="btn">
+    </form>
+</div>
 </section>
-
-
-
-
+<!-- book section end -->
+<!-- review section start -->
+ <section class="review" id="review">
+<h1 class="heading">client's <span>review</span></h1>
+<div class="box-container">
+    <div class="box">
+        <img src="istockphoto-1467492200-1024x1024.jpg"  alt="">
+        <h3>jhon</h3>
+         <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star-half-alt"></i>
+        </div>
+        <p class="text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure ad incidunt sunt porro numquam delectus at perferendis
+            ab saepe reprehenderit, architecto eius hic maiores, officia facere reiciendis, ut nobis! Minima.
+        </p>
+    </div>
+    <div class="box">
+        <img src="istockphoto-1467492200-1024x1024.jpg"  alt="">
+        <h3>jhon</h3>
+         <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star-half-alt"></i>
+        </div>
+        <p class="text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure ad incidunt sunt porro numquam delectus at perferendis
+            ab saepe reprehenderit, architecto eius hic maiores, officia facere reiciendis, ut nobis! Minima.
+        </p>
+    </div>    <div class="box">
+        <img src="istockphoto-1467492200-1024x1024.jpg"  alt="">
+        <h3>jhon</h3>
+         <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star-half-alt"></i>
+        </div>
+        <p class="text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure ad incidunt sunt porro numquam delectus at perferendis
+            ab saepe reprehenderit, architecto eius hic maiores, officia facere reiciendis, ut nobis! Minima.
+        </p>
+    </div>
+   
+</div>
+ </section>
+ <!-- review end -->
     <script src="script.js"></script>
 
 
