--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 <h1 class="heading">client's <span>review</span></h1>
 <div class="box-container">
     <div class="box">
-        <img src="istockphoto-1467492200-1024x1024.jpg"  alt="">
-        <h3>jhon</h3>
+        <img src="zakaria.jpg"  alt="">
+        <h3>zakaria</h3>
          <div class="stars">
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
@@ -267,8 +267,8 @@
         </p>
     </div>
     <div class="box">
-        <img src="istockphoto-1467492200-1024x1024.jpg"  alt="">
-        <h3>jhon</h3>
+        <img src="zakaria.jpg"  alt="">
+        <h3>zakaria</h3>
          <div class="stars">
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
@@ -281,8 +281,8 @@
             ab saepe reprehenderit, architecto eius hic maiores, officia facere reiciendis, ut nobis! Minima.
         </p>
     </div>    <div class="box">
-        <img src="istockphoto-1467492200-1024x1024.jpg"  alt="">
-        <h3>jhon</h3>
+        <img src="zakaria.jpg"  alt="">
+        <h3>zakaria</h3>
          <div class="stars">
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
@@ -299,6 +299,7 @@
 </div>
  </section>
  <!-- review end -->
+
     <script src="script.js"></script>
 
 
