--- a/index.html
+++ b/index.html
@@ -299,6 +299,60 @@
 </div>
  </section>
  <!-- review end -->
+  <!-- blog section start  -->
+
+  <section class="blog" id="blog">
+    <h1 class="heading">our <span>blog</span></h1>
+    <div class="box-container">
+        <div class="box">
+            <div class="image">
+            <img src="food.jpg"alt="">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <a href="#"><i class="fas fa-calendar">1'st way 2025</i>
+                    <a href="#"><i class="fas fa-user">by admin</i></a>
+                    <h3>blog title goes her</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure ad incidunt sunt porro numquam delectus at perferendis
+                        ab saepe reprehenderit, architecto eius hic maiores, officia facere reiciendis, ut nobis! Minima.</p>
+                        <a href="#" class="btn">learn more<span class="fas fa-chevron-right "></span></a>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+            <img src="cofee.jpg"alt="">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <a href="#"><i class="fas fa-calendar">1'st way 2025</i></a>
+                    <a href="#"><i class="fas fa-user">by admin</i></a>
+                    <h3>blog title goes her</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure ad incidunt sunt porro numquam delectus at perferendis
+                        ab saepe reprehenderit, architecto eius hic maiores, officia facere reiciendis, ut nobis! Minima.</p>
+                        <a href="#" class="btn">learn more <span class="fas fa-chevron-right "></span></a>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+            <img src="sport.jpg"alt="">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <a href="#"><i class="fas fa-calendar">1'st way 2025</i>
+                    <a href="#"><i class="fas fa-user">by admin</i></a>
+                </div>
+                    <h3>blog title goes her</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure ad incidunt sunt porro numquam delectus at perferendis
+                        ab saepe reprehenderit, architecto eius hic maiores, officia facere reiciendis, ut nobis! Minima.</p>
+                        <a href="#" class="btn">learn more<span class="fas fa-chevron-right "></span></a>
+                
+            </div>
+        </div>
+    </div>
+  </section>
+   <!-- blog end -->
 
     <script src="script.js"></script>
 
