--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#doctors">doctors</a>
             <a href="#book">book</a>
             <a href="#review">review</a>
-            <a href="#blogs">blogs</a>
+            <a href="#blog">blogs</a>
         </nav>
         <div id="menu-btn" class="fas fa-bars"></div>
     </header>
@@ -302,7 +302,7 @@
   <!-- blog section start  -->
 
   <section class="blog" id="blog">
-    <h1 class="heading">our <span>blog</span></h1>
+    <h1 class="heading">our <span>blogs</span></h1>
     <div class="box-container">
         <div class="box">
             <div class="image">
@@ -355,6 +355,54 @@
     </div>
   </section>
    <!-- blog end -->
+
+   <!-- fooer section start -->
+
+<section class="footer">
+    <div class="box-container">
+        <div class="box">
+            <h3>quic links</h3>
+            <a href="#"><i class="fas fa-chevron-right "></i>services</a>
+            <a href="#"><i class="fas fa-chevron-right "></i>home</a>
+            <a href="#"><i class="fas fa-chevron-right "></i>about</a>
+            <a href="#"><i class="fas fa-chevron-right "></i>doctors</a>
+            <a href="#"><i class="fas fa-chevron-right "></i>book</a>
+            <a href="#"><i class="fas fa-chevron-right "></i>review</a>
+            <a href="#"><i class="fas fa-chevron-right "></i>blogs</a>
+        </div>
+        <div class="box">
+            <h3>our services</h3>
+            <a href="#"><i class="fas fa-chevron-right "></i>cardiology</a>
+            <a href="#"><i class="fas fa-chevron-right "></i>ambulance service</a>
+            <a href="#"><i class="fas fa-chevron-right "></i>dental care</a>
+            <a href="#"><i class="fas fa-chevron-right "></i>diagnosis</a>
+        </div>
+        <div class="box">
+            <h3>contact info</h3>
+            <a href="#"><i class="fas fa-phone "></i>0599331247</a>
+            <a href="#"><i class="fas fa-phone "></i>0632589744</a>
+            <a href="#"><i class="fas fa-envelope "></i>zakaria@gmail.com</a>
+            <a href="#"><i class="fas fa-envelope "></i>taha@gmail.com</a>
+            <a href="#"><i class="fas fa-map-marker-alt "></i>Aintemouchent , algiers -ubbat</a>
+        </div>
+        <div class="box">
+            <h3>folow us</h3>
+            <a href="#"><i class="fab fa-facebook-f "></i>facebook</a>
+            <a href="#"><i class="fab fa-instagram"></i>instagram</a>
+            <a href="#"><i class="fab fa-twitter "></i>twitter</a>
+            <a href="#"><i class="fab fa-linkedin "></i>linkedin</a>
+            <a href="#"><i class="fab fa-pinterest "></i>piterest</a>
+        </div>
+
+    </div>
+    <div class="credit">created by <span>bn.zakaria , mk.taha , bn.kouider</span></div>
+
+</section>
+
+
+
+
+   <!-- footer secrion end -->
 
     <script src="script.js"></script>
 
