--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete responsive hospital website design</title>
+    <title>clinic web site</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -34,8 +34,12 @@
 </div>
             <div class="content">
                 <h3>stay safe, stay healthy</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
-                <a href="#" class="btn">contact us<span class="fas fa-chevron-right"></span></a>
+                <p>Welcome to MedCar Clinic ,
+                 Your Trusted Partner in Health and Wellness
+                 At MedCar Clinic, we are committed to providing exceptional healthcare services with a focus on compassion, expertise, and personalized care. Our experienced team of medical professionals is dedicated to addressing your health needs with the highest standard of care.
+
+                </p>
+                <a href="#contact" class="btn">contact us<span class="fas fa-chevron-right"></span></a>
 
             </div>
 
@@ -164,8 +168,8 @@
 
     <div class="box-container">
         <div class="box">
-            <img src="image/doc-1.jpg" alt="">
-            <h3>john deo</h3>
+            <img src="beta.gif" alt="">
+            <h3>b3t4</h3>
             <span>expert doctor</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
@@ -177,8 +181,8 @@
         </div>
 
         <div class="box">
-            <img src="image/doc-2.jpg" alt="">
-            <h3>john deo</h3>
+            <img src="beta.gif" alt="">
+            <h3>b3t4</h3>
             <span>expert doctor</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
@@ -190,8 +194,8 @@
         </div>
 
         <div class="box">
-            <img src="image/doc-3.jpg" alt="">
-            <h3>john deo</h3>
+            <img src="beta.gif" alt="">
+            <h3>b3t4</h3>
             <span>expert doctor</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
@@ -203,8 +207,8 @@
         </div>
 
         <div class="box">
-            <img src="image/doc-4.jpg" alt="">
-            <h3>john deo</h3>
+            <img src="beta.gif" alt="">
+            <h3>b3t4</h3>
             <span>expert doctor</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
@@ -215,8 +219,8 @@
             </div>
         </div>
         <div class="box">
-            <img src="image/doc-5.jpg" alt="">
-            <h3>john deo</h3>
+            <img src="beta.gif" alt="">
+            <h3>b3t4</h3>
             <span>expert doctor</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
@@ -252,8 +256,8 @@
 <h1 class="heading">client's <span>review</span></h1>
 <div class="box-container">
     <div class="box">
-        <img src="zakaria.jpg"  alt="">
-        <h3>zakaria</h3>
+        <img src="beta.gif"  alt="">
+        <h3>b3ta</h3>
          <div class="stars">
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
@@ -267,8 +271,8 @@
         </p>
     </div>
     <div class="box">
-        <img src="zakaria.jpg"  alt="">
-        <h3>zakaria</h3>
+        <img src="beta.gif"  alt="">
+        <h3>b3t4</h3>
          <div class="stars">
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
@@ -281,8 +285,8 @@
             ab saepe reprehenderit, architecto eius hic maiores, officia facere reiciendis, ut nobis! Minima.
         </p>
     </div>    <div class="box">
-        <img src="zakaria.jpg"  alt="">
-        <h3>zakaria</h3>
+        <img src="beta.gif"  alt="">
+        <h3>b3t4</h3>
          <div class="stars">
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
@@ -378,7 +382,7 @@
             <a href="#"><i class="fas fa-chevron-right "></i>diagnosis</a>
         </div>
         <div class="box">
-            <h3>contact info</h3>
+            <h3 id="contact">contact info</h3>
             <a href="#"><i class="fas fa-phone "></i>0599331247</a>
             <a href="#"><i class="fas fa-phone "></i>0632589744</a>
             <a href="#"><i class="fas fa-envelope "></i>zakaria@gmail.com</a>
