--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clinic web site</title>
-    <link rel="stylesheet" href="all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -168,9 +168,9 @@
 
     <div class="box-container">
         <div class="box">
-            <img src="beta.gif" alt="">
-            <h3>b3t4</h3>
-            <span>expert doctor</span>
+            <img src="Dr.-Mohammad-Arab2022.jpg" alt="">
+            <h3>Mohammad Arab</h3>
+            <span>Registrar of Orthopedic</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
@@ -181,9 +181,9 @@
         </div>
 
         <div class="box">
-            <img src="beta.gif" alt="">
-            <h3>b3t4</h3>
-            <span>expert doctor</span>
+            <img src="Haytham_Salti .jpg" alt="">
+            <h3>Haytham Salti</h3>
+            <span>Staff Physician, Retina</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
@@ -194,9 +194,9 @@
         </div>
 
         <div class="box">
-            <img src="beta.gif" alt="">
-            <h3>b3t4</h3>
-            <span>expert doctor</span>
+            <img src="dr mekaoui.jpeg" alt="">
+            <h3>Dr.mekaoui</h3>
+            <span>CARDIO</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
@@ -207,9 +207,9 @@
         </div>
 
         <div class="box">
-            <img src="beta.gif" alt="">
-            <h3>b3t4</h3>
-            <span>expert doctor</span>
+            <img src="dr hani najm.jpeg" alt="">
+            <h3>hani najm</h3>
+            <span>congenital cardiac surgery specialist</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
@@ -219,9 +219,9 @@
             </div>
         </div>
         <div class="box">
-            <img src="beta.gif" alt="">
-            <h3>b3t4</h3>
-            <span>expert doctor</span>
+            <img src="zaki-almallah.png" alt="">
+            <h3>zaki-almallah</h3>
+            <span>professor of urology</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
