--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     <header class="header">
 
         <a href="#" class="logo"><i class="fas fa-heartbeat"></i>medcare. </a>
+        <nav class="navbar">
+            <a href="#home">home</a>
+            <a href="#services">services</a>
+            <a href="#about">about</a>
+            <a href="#doctors">doctors</a>
+            <a href="#book">book</a>
+            <a href="#review">review</a>
+            <a href="#blog">blogs</a>
+            <a href="login.html">login</a>
+            <a href="register.html">register</a>
+        </nav>
        
         <div id="menu-btn" class="fas fa-bars"></div>
     </header>
@@ -388,6 +399,8 @@
     <div class="credit">created by <span>bn.zakaria , mk.taha , bn.kouider</span></div>
 
 </section>
+
+
 
 
 
