--- a/register.html
+++ b/register.html
@@ -141,10 +141,10 @@
       <form action="register.php" method="post">
         <h3>Register now</h3>
 
-        <input type="text" placeholder="Enter your name" class="box" required>
-        <input type="email" placeholder="Enter your email" class="box" required>
-        <input type="password" placeholder="Create a password" class="box" required>
-        <input type="password" placeholder="Confirm password" class="box" required>
+        <input type="text" name="username" placeholder="Enter your name" class="box" required>
+        <input type="email" name="email" placeholder="Enter your email" class="box" required>
+        <input type="password" name="password" placeholder="Create a password" class="box" required>
+        <input type="password" name="confirm_password" placeholder="Confirm password" class="box" required>
 
         <input type="submit" value="Register" class="btn">
 
