--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clinic web site</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="fontawesome-free-6.7.2-web/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
             <a href="#book">book</a>
             <a href="#review">review</a>
             <a href="#blog">blogs</a>
-            <a href="login.html">login</a>
-            <a href="register.html">register</a>
+            <a class="btn" href="login.html">login</a>
+            <a class="btn" href="register.html">register</a>
         </nav>
        
         <div id="menu-btn" class="fas fa-bars"></div>
