--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#book">book</a>
             <a href="#review">review</a>
             <a href="#blog">blogs</a>
+            <a class="btn" href="profile.php">profile</a>
             <a class="btn" href="login.html">login</a>
             <a class="btn" href="register.html">register</a>
         </nav>
