--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
   <title>Register</title>
 
   <!-- Google Font: Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 
   <!-- Font Awesome for Icons (optional) -->
   <link rel="stylesheet" href="all.min.css">
@@ -143,6 +143,7 @@
 
         <input type="text" name="username" placeholder="Enter your name" class="box" required>
         <input type="email" name="email" placeholder="Enter your email" class="box" required>
+        <input type="tel" name="phone" placeholder="Enter your phone" class="box" required>
         <input type="password" name="password" placeholder="Create a password" class="box" required>
         <input type="password" name="confirm_password" placeholder="Confirm password" class="box" required>
 
