--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
     <!-- Login Section -->
     <section class="login" id="login">
         <div class="row">
-            <form action="login.php" method="post">
+            <form action="profile.php" method="post">
                 <h3>login now</h3>
 
                 <input type="email" name="email" placeholder="Enter your email" class="box" required>
