--- a/profile.html
+++ b/profile.html
@@ -44,6 +44,7 @@
   <div class="container">
     <h2>Welcome, <?php echo htmlspecialchars($userData['username']); ?>!</h2>
     <p>Email: <?php echo htmlspecialchars($userData['email']); ?></p>
+    <p>tel: <?php echo htmlspecialchars($userData['tel']); ?></p>
     <a href="logout.php" class="btn">Logout</a>
   </div>
 </body>
