--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
   <link href="styles.css" rel="stylesheet">
 
   <!-- Font Awesome for Icons (optional) -->
-  <link rel="stylesheet" href="all.min.css">
+  <link rel="stylesheet" href="fontawesome-free-6.7.2-web/css/all.min.css">
 
   <style>
     :root {
