--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <form action="handle_booking.php" method="post">
         <h3>book appointment</h3>
         <input type="text" name="name" placeholder="your name" class="box">
-        <input type="number" name="tel" placeholder="your number" class="box">
+        <input type="number" name="number" placeholder="your number" class="box">
         <input type="email"  name="email" placeholder="your email" class="box">
         <input type="date" name="date" class="box">
         <input type="submit" value="book now" class="btn">
