--- a/login.html
+++ b/login.html
@@ -5,17 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | HealthCare</title>
 
-    <!-- Google Fonts -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet"> -->
 
-    <!-- Font Awesome -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
 
-    <!-- Your CSS -->
-    <link rel="stylesheet" href="style.css"> <!-- Link to your main CSS file -->
+    <link rel="stylesheet" href="style.css"> 
     
-    <style>
-        /* Additional login-specific styles */
+    <!-- <style>
         .login .row {
             display: flex;
             align-items: center;
@@ -81,7 +77,7 @@
             text-decoration: underline;
             color: #12856f;
         }
-    </style>
+    </style> -->
 </head>
 <body>
 
@@ -103,8 +99,9 @@
                     <a href="#" class="login-link">Forgot your password?</a>
                 </p>
             </form>
-            <style>
-                /* Your input box style */
+             -->
+            <!-- <style>
+                
                 .box {
                     width: 100%;
                     padding: 1rem;
@@ -119,10 +116,10 @@
                 .box.error {
                     border-color: red;
                 }
-                </style>
+                </style> -->
 
         </div>
     </section>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
