--- a/login.html
+++ b/login.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | HealthCare</title>
 
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet"> -->
+    <link rel="stylesheet" href="fontawesome-free-6.7.2-web/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
-
-    <link rel="stylesheet" href="style.css"> 
     
-    <!-- <style>
+     <style>
         .login .row {
             display: flex;
             align-items: center;
@@ -77,7 +76,7 @@
             text-decoration: underline;
             color: #12856f;
         }
-    </style> -->
+    </style>
 </head>
 <body>
 
